# sgs-xray-games

./: Cargo.toml
chain-slicer-frontend/: index.html  package-lock.json  package.json
chain-slicer-frontend/src/: App.tsx  config.ts  index.css
chain-slicer-frontend/src/games/chain-slicer/: ChainSlicerGame.tsx  SlicerEngine.ts  bindings.ts  chainSlicerService.ts
chain-slicer-frontend/src/hooks/: useWallet.ts  useWalletStandalone.ts
chain-slicer-frontend/src/services/: devWalletService.ts
chain-slicer-frontend/src/utils/: authEntryUtils.ts  constants.ts
contracts/chain-slicer/: Cargo.toml  README.md
contracts/chain-slicer/src/: attestation.rs  circuit.rs  lib.rs  slicer.rs  storage.rs  test.rs  types.rs  zk.rs
