[package]
name = "chain-slicer"
version = "1.0.1"
edition = "2021"
authors = ["Fred Kyung-jin Rezeau <hello@kyungj.in>"]
description = "A Stellar smart contract implementing a trustless geometry puzzle game verified by zero-knowledge proofs"
repository = "https://github.com/fredericrezeau/stellar-game-studio"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
soroban-poseidon = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
